<resources>
    <string name="app_name">WasteAppChanneling</string>
    <string name="quotes">Membiasakan membuang sampah sesuai jenisnya</string>
    <string name="mulai">Mulai</string>
    <string name="hai">Hai,</string>
    <string name="selamat_datang">Selamat Datang !</string>
    <string name="image_welcome">image welcome</string>
    <string name="daftar">Daftar</string>
    <string name="invalid_email">Format email tidak valid!</string>
    <string name="min_length_char">Panjang minimal %1$d karakter</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="name_hint">Masukan nama lengkap anda …</string>
    <string name="email_hint">Masukan email anda…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hint_password">Masukan password anda…</string>
    <string name="punya_akun">Sudah punya akun?, login</string>
    <string name="disini">disini</string>
    <string name="login">Login</string>
    <string name="tanya_belum">Belum punya akun ?,daftar</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_kategori">Kategori Sampah</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_profil">Profil</string>
    <string name="mau_buang_sampah_apa">Mau buang sampah apa ?</string>
    <string name="gambar_sampah">Gambar Sampah</string>
    <string name="pindai_sampah">PINDAI SAMPAH</string>
    <string name="jenis_sampah">Jenis Sampah</string>
    <string name="akun">Akun</string>
    <string name="detail_akun">Detail Akun</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="logout">Logout</string>
    <string name="v1_0">V1.0</string>
    <string name="alamat_pengambilan">Alamat Pengambilan</string>
    <string name="berat_sampah">Berat Sampah</string>
    <string name="masukan_alamat_lengkap_anda">Masukan alamat lengkap anda …</string>
    <string name="kg">Kg</string>
    <string name="pilih_jasa">Pilih Jasa</string>
    <string name="motor_sampah">Motor Sampah</string>
    <string name="truck_sampah">Truck Sampah</string>
    <string name="pilih_metode_pemmbayaran">Pilih Metode Pemmbayaran</string>
    <string name="cod">COD</string>
    <string name="rp">Rp</string>
    <string name="konfirmasi_penjemputan">KONFIRMASI PENJEMPUTAN</string>
    <string name="tunggu">Mohon tunggu, jasa driver sedang menuju ke tempatmu …</string>
    <string name="siapkan_uang_pas_yaa">Siapkan uang pas yaa</string>
    <string name="sampah_diambil">SAMPAH DIAMBIL</string>
    <string name="ini_adalah_sampah_jenis">Ini adalah sampah jenis</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="preview_image">Preview Image</string>
    <string name="choose_picture">Pilih Gambar</string>
    <string name="scan">KAMERA</string>
    <string name="upload">UPLOAD GAMBAR</string>
    <string name="galeri">GALERI</string>
    <string name="masukan_alamat">Masukan Alamat</string>
    <string name="masukan_alamat_anda">Masukan alamat anda …</string>
    <string name="message_validation">Masukan %1$s anda</string>
    <string name="login_error">Masuk gagal, mohon coba kembali !</string>
    <string name="signup_error">Daftar gagal, mohon coba kemabali !</string>
    <string name="berat_sampah_riwayat">Berat Sampah</string>
    <string name="berhasil">Berhasil</string>

    <string-array name="jenis">
        <item>PLASTIK</item>
        <item>KAIN</item>
        <item>B3</item>
        <item>MAKANAN</item>
        <item>ELEKTRONIK</item>
        <item>RESIDU</item>
        <item>KERTAS/KARTON</item>
        <item>KACA</item>
        <item>LOGAM</item>
    </string-array>

    <string-array name="gambar_sampah">
        <item>@drawable/plastik</item>
        <item>@drawable/kain</item>
        <item>@drawable/b3</item>
        <item>@drawable/makanan</item>
        <item>@drawable/elektronik</item>
        <item>@drawable/residu</item>
        <item>@drawable/kertas_karton</item>
        <item>@drawable/kaca</item>
        <item>@drawable/logam</item>
    </string-array>
</resources>