<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <View
        android:id="@+id/view_register"
        android:layout_width="294dp"
        android:layout_height="294dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/image_register"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/daftar"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/font_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_register" />

    <TextView
        android:id="@+id/tv_nama_lengkap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/nama_lengkap"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_daftar"
        app:layout_constraintStart_toStartOf="@+id/tv_daftar"
        app:layout_constraintTop_toBottomOf="@+id/tv_daftar" />

    <com.fuad.mywasteappchanneling.customview.NameEditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/name_hint"
        app:layout_constraintEnd_toEndOf="@+id/tv_daftar"
        app:layout_constraintStart_toStartOf="@+id/tv_daftar"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_lengkap" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/email"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        app:layout_constraintStart_toStartOf="@+id/edt_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <com.fuad.mywasteappchanneling.customview.EmailEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/password"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <com.fuad.mywasteappchanneling.customview.PasswordEditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <TextView
        android:id="@+id/tv_regis_alamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/masukan_alamat"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_daftar"
        app:layout_constraintStart_toStartOf="@+id/tv_daftar"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />


    <com.fuad.mywasteappchanneling.customview.NameEditText
        android:id="@+id/edt_alamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/masukan_alamat_anda"
        app:layout_constraintEnd_toEndOf="@+id/tv_daftar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_daftar"
        app:layout_constraintTop_toBottomOf="@+id/tv_regis_alamat" />

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="188dp"
        android:layout_height="50dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/daftar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_daftar"
        app:layout_constraintStart_toStartOf="@+id/tv_daftar"
        app:layout_constraintTop_toBottomOf="@+id/edt_alamat" />

    <TextView
        android:id="@+id/tanya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/punya_akun"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/btn_daftar"
        app:layout_constraintTop_toBottomOf="@+id/btn_daftar" />

    <TextView
        android:id="@+id/tv_disini_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="20dp"
        android:text="@string/disini"
        android:textColor="@color/base_color"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tanya"
        app:layout_constraintTop_toBottomOf="@+id/btn_daftar" />

    <RelativeLayout
        android:id="@+id/view_progressbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/base_color_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>