<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.penjemputan.PenjemputanActivity">

    <TextView
        android:id="@+id/tv_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/alamat_pengambilan"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/base_color_light"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alamat">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.fuad.mywasteappchanneling.customview.NameEditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="7dp"
                android:hint="@string/masukan_alamat_lengkap_anda"
                android:autofillHints="postalAddress" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_berat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/berat_sampah"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_alamat"
        app:layout_constraintTop_toBottomOf="@id/card_alamat" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_berat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/base_color_light"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_berat">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv_jenis_sampah"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_marginStart="14dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="JENIS" />

            <com.fuad.mywasteappchanneling.customview.NameEditText
                android:id="@+id/edt_berat"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_marginStart="12dp"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/tv_jenis_sampah"
                app:layout_constraintStart_toEndOf="@id/tv_jenis_sampah"
                app:layout_constraintTop_toTopOf="@+id/tv_jenis_sampah" />

            <TextView
                android:id="@+id/tv_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/kg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edt_berat"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_jasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/pilih_jasa"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_alamat"
        app:layout_constraintTop_toBottomOf="@id/card_berat"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_jasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/base_color_light"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jasa">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/batas_card_jasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/batas_card_jasa"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="7dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motor_sampah" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/truck_sampah" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_pembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/pilih_metode_pemmbayaran"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_alamat"
        app:layout_constraintTop_toBottomOf="@id/card_jasa"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_pembayaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/base_color_light"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pembayaran">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/batas_card_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioGroup
                android:id="@+id/rg_bayar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/batas_card_pembayaran"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="7dp">

                <RadioButton
                    android:id="@+id/rb_cod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cod"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/batas_card_pembayaran" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_rp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@+id/rg_bayar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/harga"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="20000"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/tv_rp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_jemput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/konfirmasi_penjemputan"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/card_pembayaran"
        app:layout_constraintStart_toStartOf="@+id/card_pembayaran"
        app:layout_constraintEnd_toEndOf="@+id/card_pembayaran" />
</androidx.constraintlayout.widget.ConstraintLayout>