<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PengambilanActivity">


    <TextView
        android:id="@+id/tv_tunggu"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/tunggu"
        android:textAlignment="center"
        android:textAppearance="@style/header_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/truck"
        android:layout_width="390dp"
        android:layout_height="178dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/truck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tunggu" />

    <TextView
        android:id="@+id/tv_siapkan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/siapkan_uang_pas_yaa"
        android:textAlignment="center"
        android:textAppearance="@style/header_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truck" />

    <Button
        android:id="@+id/btn_jemput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/sampah_diambil"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_siapkan" />



</androidx.constraintlayout.widget.ConstraintLayout>