<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profil.ProfilFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_detail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/base_color_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/icon_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableRightCompat="@drawable/ic_baseline_account_box_24" />

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/detail_akun"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_detail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/icon_nav_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableRightCompat="@drawable/ic_baseline_navigate_next_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_tentang"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="@id/card_detail"
        app:layout_constraintTop_toBottomOf="@id/card_detail"
        app:cardBackgroundColor="@color/base_color_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/icon_tentang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableRightCompat="@drawable/ic_baseline_help_center_24" />

            <TextView
                android:id="@+id/tv_tentang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/tentang_kami"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_tentang"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/icon_nav_tentang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableRightCompat="@drawable/ic_baseline_navigate_next_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="@id/card_tentang"
        app:layout_constraintTop_toBottomOf="@id/card_tentang"
        app:cardBackgroundColor="@color/base_color_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/icon_logout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableRightCompat="@drawable/ic_baseline_exit_to_app_24" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/logout"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_logout"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_versi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/v1_0"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/card_logout"
        app:layout_constraintStart_toStartOf="@id/card_logout"
        app:layout_constraintEnd_toEndOf="@id/card_logout"/>

</androidx.constraintlayout.widget.ConstraintLayout>